# codebase-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: client_usage.py
src/codebase_mcp/: __init__.py  __main__.py
src/codebase_mcp/agent/: __init__.py  loop.py
src/codebase_mcp/analyzers/: ast_analyzer.py  dependency.py  patterns.py  scanner.py  search.py  summarizer.py  task_decomposer.py
src/codebase_mcp/core/: codebase.py  config.py  memory.py
src/codebase_mcp/mcp_server/: server.py
src/codebase_mcp/schemas/: models.py
src/codebase_mcp/tools/: __init__.py  _context.py  analyze_repo.py  base.py  explain_file.py  find_references.py  memory_status.py  registry.py  suggest_files.py
src/codebase_mcp/utils/: file_utils.py  logging.py
tests/: conftest.py  test_agent_loop.py  test_ast_analyzer.py  test_dependency.py  test_mcp_server.py  test_memory.py  test_patterns.py  test_registry.py  test_scanner.py  test_search.py  test_task_decomposer.py  test_tools.py
